# haskell-lmdb

./: .gitignore  .hlint.yaml  cabal.project  cardano-lmdb.cabal
.github/workflows/: documentation.yml  haskell.yml
bench/: Main.hs
bench/Bench/: Utils.hs
bench/Bench/Database/LMDB/Simple/: Cursor.hs
changelog.d/: 20230224_104237_joris_windows_macos_ci.md
hsrc_lib/Database/LMDB/: FFI.hsc  Raw.hs
hsrc_lib/Foreign/C/ConstPtr/: Compat.hs
scripts/: format-cabal.sh  format-fourmolu.sh  run-stylish.sh
src/Database/LMDB/: Raw.hs
src/raw/Database/LMDB/: Raw.hs
src/simple/Database/LMDB/: Simple.hs
src/simple/Database/LMDB/Simple/: Cursor.hs  DBRef.hs  Extra.hs  Internal.hs  TransactionHandle.hs  View.hs
test/: Main.hs
test/raw/: Main.hs
test/simple/: Harness.hs  criterion.hs  sample.hs
test/simple-cursors/: Main.hs
test/simple-cursors/Test/Database/LMDB/Simple/: Cursor.hs  TransactionHandle.hs
test/simple-cursors/Test/Database/LMDB/Simple/Cursor/: Lockstep.hs
test/simple-cursors/Test/Database/LMDB/Simple/Cursor/Lockstep/: Mock.hs
test/simple/Database/LMDB/: SimpleSpec.hs
test/simple/Database/LMDB/Simple/: DBRefSpec.hs
