cabal-version: 3.0
name: cardano-lmdb
version: 0.4.0.1
synopsis: Lightning MDB bindings
category: Database
description:
  LMDB is a read-optimized Berkeley DB replacement developed by Symas
  for the OpenLDAP project. LMDB has impressive performance characteristics
  and a friendly BSD-style OpenLDAP license. See <http://symas.com/mdb/>.

  This library has Haskell bindings to the LMDB library. You must install
  the lmdb development files before installing this library,
  e.g. `sudo apt-get install liblmdb-dev` works for Ubuntu.

author: David Barbour
maintainer: operations@iohk.io
homepage: http://github.com/input-output-hk/haskell-lmdb
copyright: (c) 2014 by David Barbour
license: BSD-2-Clause
license-file: LICENSE
stability: experimental
build-type: Simple
tested-with: ghc ==8.10 || ==9.2 || ==9.4 || ==9.6 || ==9.8 || ==9.10
extra-doc-files:
  CHANGELOG.md
  INPUT-OUTPUT-FORK.md
  README.md

source-repository head
  type: git
  location: http://github.com/input-output-hk/haskell-lmdb.git

flag asserts
  description: Enable assertions
  manual: False
  default: False

common common-lib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wno-unticked-promoted-constructors
    -Wunused-packages

  if flag(asserts)
    ghc-options: -fno-ignore-asserts
    cpp-options: -DENABLE_ASSERTIONS

common common-test
  import: common-lib
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

common common-bench
  import: common-test
  ghc-options: -with-rtsopts=-A32m

  -- We use this option to avoid skewed results due to changes in cache-line
  -- alignment. See
  -- https://github.com/Bodigrim/tasty-bench#comparison-against-baseline
  if impl(ghc >=8.6)
    ghc-options: -fproc-alignment=64

library
  import: common-lib
  hs-source-dirs: src/simple
  exposed-modules:
    Database.LMDB.Simple
    Database.LMDB.Simple.Cursor
    Database.LMDB.Simple.DBRef
    Database.LMDB.Simple.Extra
    Database.LMDB.Simple.Internal
    Database.LMDB.Simple.TransactionHandle
    Database.LMDB.Simple.View

  build-depends:
    async,
    base >=4.14 && <4.21,
    bytestring >=0.10 && <0.13,
    cardano-lmdb:raw ^>=0.4,
    containers,
    exceptions,
    mtl,
    serialise >=0.2 && <0.3,
    unliftio-core,

library raw
  import: common-lib
  visibility: public
  hs-source-dirs: src/raw
  build-depends:
    base >=4.14 && <4.21,
    cardano-lmdb:ffi,

  exposed-modules: Database.LMDB.Raw

library ffi
  import: common-lib
  visibility: private
  hs-source-dirs: src/raw
  build-depends: base >=4.14 && <4.21
  build-tool-depends: hsc2hs:hsc2hs
  exposed-modules: Database.LMDB.FFI
  pkgconfig-depends: lmdb >=0.9 && <0.10

test-suite test-cursors
  import: common-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test/simple-cursors
  main-is: Main.hs
  other-modules:
    Test.Database.LMDB.Simple.Cursor
    Test.Database.LMDB.Simple.Cursor.Lockstep
    Test.Database.LMDB.Simple.Cursor.Lockstep.Mock
    Test.Database.LMDB.Simple.TransactionHandle

  build-depends:
    QuickCheck,
    base,
    cardano-lmdb:{cardano-lmdb, raw},
    containers,
    directory,
    exceptions,
    mtl,
    quickcheck-dynamic,
    quickcheck-lockstep >=0.2,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    temporary,

test-suite sample
  import: common-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test/simple
  main-is: sample.hs
  build-depends:
    base,
    cardano-lmdb,
    temporary,

test-suite hspec
  import: common-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test/simple
  main-is: hspec.hs
  other-modules:
    Database.LMDB.Simple.DBRefSpec
    Database.LMDB.SimpleSpec
    Harness

  build-depends:
    base,
    cardano-lmdb,
    directory,
    hspec,
    temporary,

  build-tool-depends: hspec-discover:hspec-discover

test-suite test-raw
  import: common-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test/raw
  main-is: Main.hs
  build-depends:
    async,
    base >=4.14 && <4.21,
    cardano-lmdb:{ffi, raw},
    tasty,
    tasty-hunit,
    temporary,

benchmark bench
  import: common-bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  other-modules:
    Bench.Database.LMDB.Simple.Cursor
    Bench.Utils

  build-depends:
    QuickCheck,
    base,
    bytestring,
    cardano-lmdb,
    containers,
    deepseq,
    directory,
    serialise,
    tasty,
    tasty-bench,
    tasty-quickcheck,
    temporary,

benchmark criterion
  import: common-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test/simple
  main-is: criterion.hs
  other-modules: Harness
  build-depends:
    base,
    cardano-lmdb:{cardano-lmdb, raw},
    criterion,
    deepseq,
    directory,
    temporary,
